0.69_04
        Feed code being refactored.

0.69_03 13 May 2006
        Add Wiki::Toolkit::Feed::RSS (formerly CGI::Wiki::Plugin::RSS::Modwiki)
        and Wiki::Toolkit::Feed::Atom (formerly CGI::Wiki::Plugin::Atom)

0.69_02 27 April 2006
        Add missing new file lib/Wiki/Toolkit/Setup/Database.pm to
        distribution.

0.69_01 23 April 2006
        *** IMPORTANT NOTICE *** This release introduces a new database schema
        which should be considered beta in nature at this stage. It is not yet
        suitable for deployment on production data and should only be tested
        on copies of your production data. If it eats your data, you get to
        keep the pieces. Additionally, functionality exposed in this beta
        release is subject to change.

        Rename to Wiki::Toolkit.
        Support for moderation on a per-node basis.
        Update to the database schema: added needs_moderation column to
         node, and moderated column to content
        You will need to run wiki-toolkit-setupdb to upgrade your database

		Many more plugin points: pre_write + pre_retrieve (get to change
		 the data), pre_moderate + post_moderate, pre_rename + post_rename,
		 + post_delete. See test 150 for examples, and the perldoc of
		 Wiki::Toolkit::Plugin for a description.

        Merge Wiki::Toolkit::Formatter::Multiple:
        0.02    15 September 2004
                Applied patch from Tom Insam to fix bug with 
                find_internal_links.

        0.01    22 September 2003
                Initial release.

0.69    22 February 2006
        Update to database schema: added an ID column to node, and changed
          the content + metadata tables to FK to the ID field, rather than
          the node name. Also added rails like schema_info table, to hold
          the current database schema version number
        You will need to run cgi-wiki-setupdb to upgrade your database

0.62    26 November 2004