@@ -1,5 +1,7 @@
 0.69_04
         Feed code being refactored.
+        Check that the database schema is up-to-date when initializing the
+        store and abort otherwise.
 
 0.69_03 13 May 2006
         Add Wiki::Toolkit::Feed::RSS (formerly CGI::Wiki::Plugin::RSS::Modwiki)
